starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__boolean_literal.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\ntrue"
---
Spanned {
    node: Literal(
        Boolean(
            true,
        ),
    ),
    span: 0..4,
}
