starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__identifier.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\nfoo"
---
Spanned {
    node: ScopedName(
        [
            Identifier {
                name: "foo",
                span: 0..3,
            },
        ],
    ),
    span: 0..3,
}
