starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__integer_literal.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n42"
---
Spanned {
    node: Literal(
        Integer(
            IntegerLiteral {
                digits: "42",
                radix: Decimal,
            },
        ),
    ),
    span: 0..2,
}
