starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__integer_literal_binary.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n0b1010"
---
Spanned {
    node: Literal(
        Integer(
            IntegerLiteral {
                digits: "1010",
                radix: Binary,
            },
        ),
    ),
    span: 0..6,
}
