starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__integer_literal_hex.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n0xDeadBeef"
---
Spanned {
    node: Literal(
        Integer(
            IntegerLiteral {
                digits: "DeadBeef",
                radix: Hexadecimal,
            },
        ),
    ),
    span: 0..10,
}
