starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__integer_literal_huge_does_not_panic.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n170141183460469231731687303715884105728"
---
Spanned {
    node: Literal(
        Integer(
            IntegerLiteral {
                digits: "170141183460469231731687303715884105728",
                radix: Decimal,
            },
        ),
    ),
    span: 0..39,
}
