starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__integer_literal_octal.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n0o755"
---
Spanned {
    node: Literal(
        Integer(
            IntegerLiteral {
                digits: "755",
                radix: Octal,
            },
        ),
    ),
    span: 0..5,
}
