starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__literal__tests__unit_literal.snap
---
source: starstream-compiler/src/parser/expression/primary/literal.rs
description: "Code:\n\n()"
---
Spanned {
    node: Literal(
        Unit,
    ),
    span: 0..2,
}
